syntax = "proto3";

package go.micro.service.comment;

service CommentService {
    // 新增一条评价
    rpc AddComment(AddCommentReq) returns (Resp) {}
    // 根据商品id获取该商品的所有评价
	rpc GetCommentsByProductId(GetCommentsByProductIdReq) returns (GetCommentsByProductIdResp) {}
	// 根据订单id（即评价id）获取该订单对应的评价
    rpc GetCommentByOrderId(GetCommentByOrderIdReq) returns (GetCommentByOrderIdResp) {}
}

message Comment {
    string orderID = 1;      // 订单id，即评价id
	string userID = 2;       // 评价用户id
	string productID = 3;    // 评价商品id
	int32 star = 4;         // 推荐等级（评价星级）
	string content = 5;     // 评价内容
	int64 createTime = 6;  // 评价创建时间
}

message Resp {
    int32 code = 1;
    string msg = 2;
    string data = 3;
}

message GetCommentsByProductIdReq {
	string productID = 1;
}

message GetCommentsByProductIdResp {
    int32 code = 1;
    string msg = 2;
    repeated Comment comments = 3;
}

message GetCommentByOrderIdReq {
	string orderID = 1;
}

message GetCommentByOrderIdResp {
    int32 code = 1;
    string msg = 2;
    Comment comment = 3;
}

message AddCommentReq {
	Comment comment = 1;
}


